--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ h1 .small {
 
 .catch-phrase {
   color: white;
-  margin-top: 15%;
+  margin-top: 10%;
   margin-right: 3%;
 }
 
@@ -42,6 +42,7 @@ footer {
 
 a {
   color: white;
+  text-decoration: underline;
 }
 
 #addingToBrowser {
